# chocopi

./: .env.example  .gitignore  AGENTS.md  README.md  audio.py  chocopi  chocopi.py  chocopi.service  config.py  config.yml  conversation.py  display.py  install.sh  pygame-test.py  pyproject.toml  requirements.txt  wakeword.py
install/pipewire/: 99-echo-cancel.conf
install/systemd/: chocopi.service
install/wireplumber/: 51-bluetooth-audio.conf  51-bluetooth-audio.lua  51-bluetooth-headset.lua
models/: anyeong-choco.onnx  anyeong-choco.tflite  hey-choco.onnx  hey-choco.tflite  hola-choco.onnx  hola-choco.tflite  nihao-choco.onnx  nihao-choco.tflite
src/chocopi/: __init__.py  __main__.py  audio.py  chocopi.py  config.py  conversation.py  display.py  language.py  memory.py  profiles.py  providers.py  wakeword.py
