[project]
name = "chocopi"
version = "0.1.0"
description = "Raspberry Pi based smart speaker"
authors = [
    {name = "Max Lee", email = "2389838+codesmax@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4,<2.0",
    "openwakeword>=0.6.0",
    "pygame-ce>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.0.0",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.4.6",
    "soundfile>=0.13.1",
    "websockets>=13.0",
]

[project.scripts]
chocopi = "chocopi:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
